--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name=”robots” content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erin Keller</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,200,300,400,500,600,700,800,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:100,200,300,400,500,600,700,800,900">
   </head>
   <body className="preload"><div id="root"></div></body>
 </html>
