Added about me section, made some minor css changes to mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <title>Erin Keller</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,200,300,400,500,600,700,800,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:100,200,300,400,500,600,700,800,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Secular+One:100,200,300,400,500,600,700,800,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merienda:100,200,300,400,500,600,700,800,900">
   </head>
   <body className="preload"><div id="root"></div></body>
 </html>
